Time: 40 ms (20.87%), Space: 59.3 MB (45.63%) - LeetHub